K8s/policy/ResourceTemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sresourcelimits
spec:
  crd:
    spec:
      names:
        kind: K8sResourceLimits
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sresourcelimits

      violation[{"msg": msg}] {
        input.review.kind.kind == "Deployment"
        container := input.review.object.spec.template.spec.containers[_]

        not container.resources.limits.cpu
        msg := sprintf("❌ CPU limit missing for container %v", [container.name])
      }

      violation[{"msg": msg}] {
        input.review.kind.kind == "Deployment"
        container := input.review.object.spec.template.spec.containers[_]

        not container.resources.limits.memory
        msg := sprintf("❌ Memory limit missing for container %v", [container.name])
      }
