K8s/policy/resource-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sResourceLimits
metadata:
  name: require-resource-limits
spec:
  enforcementAction: deny
  match:
    namespaces: ["pavi-ns"]
    labelSelector:
      matchLabels:
        app: duniversity-app   # 🔥 IMPORTANT
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
